Added map showing functionallity on the dropdowns of apts

--- a/views/usrhome.ejs
+++ b/views/usrhome.ejs
@@ -66,6 +66,11 @@
     .moreInfo {
       display: none;
     }
+    div[id^="map"]{
+      height: 30rem;
+      width: 100%;
+      border-radius: 2rem;
+    }
   </style>
 </head>
 
@@ -150,7 +155,7 @@
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
-  <script type="text/javascript" src="javascript/home.js"></script>
+  <script type="text/javascript" src="http://localhost:3000/javascript/home.js "></script>
   <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBV27rjUQoC_np17lGCrD4hmuIpA0ne4pg&callback=initMap&signed_in=true&libraries=places,visualization" async defer></script>
 
 
