fixed user ID session varriables to use the session instead of hardcoded values

--- a/views/usrhome.ejs
+++ b/views/usrhome.ejs
@@ -66,6 +66,10 @@
     .moreInfo {
       display: none;
     }
+    .headerC{
+      width: 40%;
+      margin: auto;
+    }
     div[id^="map"]{
       height: 30rem;
       width: 100%;
@@ -104,7 +108,7 @@
   </nav>
 
   <div class="bigBox">
-    <div class="row">
+    <div class="row headerC">
       <div class="top_Text">
         <div class="col-md-12">
           <h2>Your Appointments</h2>
@@ -115,7 +119,7 @@
       <%-yourApts %>
     </div>
 
-    <div class="row">
+    <div class="row headerC">
       <div class="desc_Text">
         <div class="col-md-12">
           <h2>Appointments You've Been Invited To</h2>
