--- a/views/aptSch.ejs
+++ b/views/aptSch.ejs
@@ -28,7 +28,7 @@
         </ul>
         <ul id='nav' class="nav navbar-nav navbar-right">
           <li class="dropdown">
-            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">account <span class="caret"></span></a>
+            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><%-username %> <span class="caret"></span></a>
             <ul id='nav' class="dropdown-menu">
               <li><a href= <%=linkPref %> >preferences</a></li>
               <li role="separator" class="divider"></li>
