--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -20,6 +20,10 @@ html, body {
   overflow:auto;
   padding-bottom:150px; /* this needs to be bigger than footer height*/
 }
+.sBigBox {
+  padding-top: 3rem;
+  padding-bottom: 25rem;
+}
 
 /*LKH edit:  If used on another page, please update tag names to be page specific
 .row {
@@ -38,81 +42,37 @@ html, body {
     *display:inline; /* ie7 fix */
     float: none; /* this is the part that makes it work */
 }
+.signupForm {
+  background-color: beige;
+  border-radius: 5rem;
+}
 .formBox {
   padding-bottom: 20px;
   padding-top: 40px;
   padding-left: 20%;
   padding-right: 20%;
 }
-
-.bigBox {
-background-image: -webkit-gradient(
-	linear,
-	left top,
-	right bottom,
-	color-stop(0, #6949DE),
-	color-stop(1, #6BFFCE),
-	color-stop(1, #FF0000)
-);
-height: 100%;
-
-background-image: -o-linear-gradient(right bottom, #6949DE 0%, #6BFFCE 100%, #FF0000 100%);
-background-image: -moz-linear-gradient(right bottom, #6949DE 0%, #6BFFCE 100%, #FF0000 100%);
-background-image: -webkit-linear-gradient(right bottom, #6949DE 0%, #6BFFCE 100%, #FF0000 100%);
-background-image: -ms-linear-gradient(right bottom, #6949DE 0%, #6BFFCE 100%, #FF0000 100%);
-background-image: linear-gradient(to right bottom, #6949DE 0%, #6BFFCE 100%, #FF0000 100%);
+.signUpBox {
+  padding-bottom: 20px;
+  padding-top: 5rem;
+  padding-left: 25rem;
+  padding-right: 20%;
+  font-size: 2rem;
 }
-
-
-/*.signupForm {
-  display: block;
-  background: -webkit-gradient(
-  	linear,
-  	left top,
-  	right bottom,
-  	color-stop(0.77, #6974DA),
-  	color-stop(1, #6AD2D2)
-  );
-background-image: -o-linear-gradient(right bottom, #6974DA 77%, #6AD2D2 100%);
-background-image: -moz-linear-gradient(right bottom, #6974DA 77%, #6AD2D2 100%);
-background-image: -webkit-linear-gradient(right bottom, #6974DA 77%, #6AD2D2 100%);
-background-image: -ms-linear-gradient(right bottom, #6974DA 77%, #6AD2D2 100%);
-background-image: linear-gradient(to right bottom, #6974DA 77%, #6AD2D2 100%);
-
-  postion: relative;
-  top: 100px;
-  height: 500px;
-  width: 500px;
-}
-.loginForm {
-  display: block;
-  background: -webkit-gradient(
-  	linear,
-  	left top,
-  	right bottom,
-  	color-stop(0.77, #6974DA),
-  	color-stop(1, #6AD2D2)
-  );
-background-image: -o-linear-gradient(right bottom, #6974DA 77%, #6AD2D2 100%);
-background-image: -moz-linear-gradient(right bottom, #6974DA 77%, #6AD2D2 100%);
-background-image: -webkit-linear-gradient(right bottom, #6974DA 77%, #6AD2D2 100%);
-background-image: -ms-linear-gradient(right bottom, #6974DA 77%, #6AD2D2 100%);
-background-image: linear-gradient(to right bottom, #6974DA 77%, #6AD2D2 100%);
-
-  postion: relative;
-  top: 100px;
-  height: 400px;
-  width: 500px;
-}*/
 
 .extension {
   height: 100px;
   font-size: 3em ;
 }
-
+.submitButton {
+  position:relative;
+  left: 60rem;
+  bottom: 2rem;
+}
 
 .title {
   padding-top: 150px;
+  font-size: 3rem;
 }
 
 /*LKH edit: too much padding on the pref form. If used on another page, please update tag names to be page specific
