Tried adding gray background and beige boxes around input areas

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -46,48 +46,38 @@
       </div>
     </div>
   </nav>
+<!-- END NAVBAR AREA__________________________________________________-->
+<div class = "row text-center landBody">
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <p class="headLine"> NEED A WAY TO FIND LOCATIONS FOR IMPORTANT MEETINGS? </p>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+
+</div>
 
 
-  <div class="bigBox">
-    <div class="row">
-      <div class="top_Text">
-        <div class="col-md-12">
-          This is the top text on the line
-        </div>
-      </div>
-    </div>
-    <div class="row">
-      <div class="col-md-3 rowStart">
-      </div>
-      <div class="col-xs-6 col-md-3 thumbnails">
-        <a href="login" class="thumbnail">
-          <img src="http://image.shutterstock.com/display_pic_with_logo/892306/98291444/stock-photo-plastic-ketchup-bottle-isolated-on-white-98291444.jpg" alt="http://image.shutterstock.com/display_pic_with_logo/892306/98291444/stock-photo-plastic-ketchup-bottle-isolated-on-white-98291444.jpg">
-          <p> this is the description for the box</p>
-        </a>
-      </div>
-      <div class="col-xs-6 col-md-3 thumbnails">
-        <a href="signup" class="thumbnail">
-          <img src="http://image.shutterstock.com/display_pic_with_logo/892306/98291444/stock-photo-plastic-ketchup-bottle-isolated-on-white-98291444.jpg" alt="http://image.shutterstock.com/display_pic_with_logo/892306/98291444/stock-photo-plastic-ketchup-bottle-isolated-on-white-98291444.jpg">
-          <p> this is the description for the box</p>
-        </a>
-      </div>
-      <div class="col-xs-6 col-md-3 rowEnd">
-      </div>
-    </div>
-    <div class="row">
-      <div class="desc_Text">
-        <div class="col-md-12">
-          This is the text below the thubnails
-        </div>
-      </div>
-      <div class="btm_Desc">
-        <div class="col-md-12">
-          Second line below thumbnails
-        </div>
-      </div>
-    </div>
+<!--beginlink area____________________________-->
+<div class="row">
+  <div class="loginButton col-md-3">
+    <a href="login" class="thumbnail">
+      <p class ="text-center" id="loginText">Please Login</p>
+    </a>
   </div>
-
+  <div class="signUpButton col-md-3">
+    <a href="signup" class="thumbnail">
+      <p class="text-center" id="signUpText">Register now!</p>
+    </a>
+  </div>
+</div>
 
 
   <div class="panel panel-default">
@@ -111,6 +101,9 @@
         </div>
       </div>
     </div>
+  </div>
+
+  <div class ="coverUp">
   </div>
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
