--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -3,6 +3,9 @@ cd body {
   padding: 50px;
   font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
 }
+body{
+  background-color: gray;
+}
 
 a {
   color: #00B7FF;
@@ -20,38 +23,71 @@ html, body {
   overflow:auto;
   padding-bottom:150px; /* this needs to be bigger than footer height*/
 }
+.landBody {
+  background-color: gray;
+}
+.headLine{
+  font-size: 4rem;
+  color: blue;
+}
+.loginButton {
+  background-color: beige;
+  height: 10rem;
+  padding-top: 2.5rem;
+  border-radius: 5rem;
+  width: 12rem;
+  position: relative;
+  left: 35rem;
+  font-size: 2rem;
+}
+
+.signUpButton {
+  background-color: beige;
+  height: 10rem;
+  padding-top: 2.5rem;
+  border-radius: 5rem;
+  width: 12rem;
+  position: relative;
+  left: 40rem;
+  font-size: 2rem;
+}
+.lCoverUp {
+  width: wrap;
+  background-color: gray;
+  height: 45rem;
+  position:relative;
+  z-index:-1;
+}
+.coverUp {
+  width: wrap;
+  background-color: gray;
+  height: 45rem;
+  position:relative;
+  z-index:-1;
+  bottom: 30rem;
+}
+.centerBox {
+  width: 10rem;
+}
+.bigBox {
+  background-color: gray;
+}
 .sBigBox {
   padding-top: 3rem;
-  padding-bottom: 25rem;
 }
 
-/*LKH edit:  If used on another page, please update tag names to be page specific
-.row {
-  text-align: center;
-}
-*/
-
-.thumbnails {
-    text-align:center;
-}
-.Name {
-
-}
-.thumbnails > li {
-    display: inline-block;
-    *display:inline; /* ie7 fix */
-    float: none; /* this is the part that makes it work */
-}
 .signupForm {
   background-color: beige;
   border-radius: 5rem;
 }
+
 .formBox {
   padding-bottom: 20px;
   padding-top: 40px;
   padding-left: 20%;
   padding-right: 20%;
 }
+
 .signUpBox {
   padding-bottom: 20px;
   padding-top: 5rem;
@@ -64,6 +100,7 @@ html, body {
   height: 100px;
   font-size: 3em ;
 }
+
 .submitButton {
   position:relative;
   left: 60rem;
@@ -74,43 +111,6 @@ html, body {
   padding-top: 150px;
   font-size: 3rem;
 }
-
-/*LKH edit: too much padding on the pref form. If used on another page, please update tag names to be page specific
-.form-group{
-  padding-top: 50px;
-
-.prefForm {
-  background-color: white;
-  width: 50%;
-}
-END LKH edit
-*/
-
-/*.signupForm:hover{109CFF
-  background-color: -webkit-gradient(
-  	linear,
-  	left top,
-  	right bottom,
-  	colorb -stop(0.77, #6974DA),
-  	color-stop(1, #6AD2D2)
-  );*/
-
-  /*background-image: -o-linear-gradient(right bottom, #6974DA 77%, #6AD2D2 100%);
-  background-image: -moz-linear-gradient(right bottom, #6974DA 77%, #6AD2D2 100%);
-  background-image: -webkit-linear-gradient(right bottom, #6974DA 77%, #6AD2D2 100%);
-  background-image: -ms-linear-gradient(right bottom, #6974DA 77%, #6AD2D2 100%);
-  background-image: linear-gradient(to right bottom, #6974DA 77%, #6AD2D2 100%);}*/
-
-
-/*div {
-  transition: background-color 0.5s ease;
-  background-color: red;
-}
-div:hover {
-  background-color: green;
-}*/
-
-
 
 /* LINDSAY EDITS */
 #map {
