--- a/views/login.ejs
+++ b/views/login.ejs
@@ -44,70 +44,47 @@
           </li>
         </ul>
       </div>
-
-      <!-- <div class="loginForm col-md-4">
-        <form action="/login" method="post">
-           <div class="formBox"><label for="username">Enter a Username
-             <input type="text" name="username"></input>
-           </label>
-         </div>
-           <div class="formBox"><label for="email">Enter an Email<br>
-             <input type="text" name="email"></input>
-           </label>
-           </div>
-           <div class="formBox"><label for="password">Create a Password
-             <input type="text" name="password"></input>
-           </label>
-           </div>
-           <button type="submit">Submit</button>
-         </form>
-       </div> -->
-       <div class="rightSpace">
-       </div>
-   </div>
-
-
-
-  <div class="bigBox">
-    <div class="row">
-      <div class="leftspace col-md-3">
-      </div>
-      <div class="signupForm col-md-6">
-        <div class="row">
-          <div class="leftBox col-md-4">
-          </div>
-          <div class="title col-md-4"> WELCOME BACK PLEASE LOGIN
-            <br> </div>
-          <div class="leftBox col-md-4">
-          </div>
-        </div>
-        <form action="/login" method="post">
-        <div class="formBox">
-          <label for="username">Enter a Username
-            <br>
-            <input type="text" name="username" placeholder="Put your Username here!"></input>
-          </label>
-        </div>
-        <div class="formBox">
-          <label for="email">Enter an Email
-            <br>
-            <input type="text" name="email" placeholder="What's your favorite ID?"></input>
-          </label>
-        </div>
-        <div class="formBox">
-          <label for="password">Create a Password
-            <br>
-            <input type="text" name="password" placeholder="shhhh don't tell anybody"></input>
-          </label>
-        </div>
-        <button type="submit">Submit</button>
-        </form>
-      </div>
-      <div class="rightSpace col-md-3">
-      </div>
     </div>
-  </div>
-  </div>
+  </nav>
+
+
+      <div class="bigBox">
+        <div class="row">
+        <div class="leftspace col-md-3">
+        </div>
+        <div class="signupForm col-md-6">
+          <div class="row">
+            <div class ="leftBox col-md-4">
+            </div>
+          <div class="title col-md-4"> WELCOME!!!!  PLEASE LOGIN<br> </div>
+          <div class ="leftBox col-md-4">
+          </div>
+        </div>
+          <form action="/signup" method="post">
+             <div class="signUpBox"><label for="username">Enter a Username<br>
+               <input type="text" name="username" placeholder="Put your Username here!"></input>
+             </label>
+           </div>
+             <div class="signUpBox"><label for="password">Enter a Password<br>
+               <input type="text" name="password" placeholder="Password123"></input>
+             </label>
+             </div>
+             <br>
+              <p>If you don't have an account you can always <a href="signup">Sign Up </a> </p>
+             <div class ="submitButton">
+             <button type="submit">Submit</button>
+           </div>
+           </form>
+         </div>
+         <div class="rightSpace col-md-3">
+         </div>
+       </div>
+     </div>
+     <div class ="row">
+       </div>
+
+       <div class ="lCoverUp">
+       </div>
 
 
   <div class="panel panel-default">
