correct link routes

--- a/views/aptSch.ejs
+++ b/views/aptSch.ejs
@@ -115,8 +115,8 @@
 
 </body>
 
-<link rel="stylesheet" type="text/css" href="datetimepicker-master/jquery.datetimepicker.css"/ >
+<!-- <link rel="stylesheet" type="text/css" href="datetimepicker-master/jquery.datetimepicker.css"/ >
 <script src="datetimepicker-master/jquery.js"></script>
-<script src="datetimepicker-master/build/jquery.datetimepicker.full.min.js"></script>
+<script src="datetimepicker-master/build/jquery.datetimepicker.full.min.js"></script> -->
 
 </html>
