--- a/views/login.ejs
+++ b/views/login.ejs
@@ -60,7 +60,7 @@
           <div class ="leftBox col-md-4">
           </div>
         </div>
-          <form action="/signup" method="post">
+          <form action="/login" method="post">
              <div class="signUpBox"><label for="username">Enter a Username<br>
                <input type="text" name="username" placeholder="Put your Username here!"></input>
              </label>
