--- a/views/aptSch.ejs
+++ b/views/aptSch.ejs
@@ -12,7 +12,7 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
 
-  <script src='public/javascript/navBar.js'></script>
+  <!-- <script src='public/javascript/navBar.js'></script> -->
 </head>
 
 <body>
@@ -62,8 +62,6 @@
           <div class="form-group">
             <label for="inputPassword3" class="col-sm-2 control-label"></label>
             <div class="col-sm-10">
-              <input id="datetimepicker" type="text" >
-
               <input type="text" class="form-control" name='mtgDate' id="mtgDate" placeholder="meeting date" rows="3">
               <input type="text" class="form-control" name='mtgDuration' id="mtgDuration" placeholder="meeting duration" rows="3">
               <input type="text" class="form-control" name='mtgDesc' id="mtgDesc" placeholder="meeting description" rows="3">
@@ -114,9 +112,13 @@
 
 
 </body>
+<script src='https://code.jquery.com/jquery-2.1.4.min.js'></script>
+<link rel="stylesheet" type="text/css" href="/datetimepicker-master/jquery.datetimepicker.css"/ >
+<script src="/datetimepicker-master/jquery.js"></script>
+<script src="/datetimepicker-master/build/jquery.datetimepicker.full.min.js"></script>
 
-<!-- <link rel="stylesheet" type="text/css" href="datetimepicker-master/jquery.datetimepicker.css"/ >
-<script src="datetimepicker-master/jquery.js"></script>
-<script src="datetimepicker-master/build/jquery.datetimepicker.full.min.js"></script> -->
+<script>
+$('#mtgDate').datetimepicker();
+</script>
 
 </html>
