passwords are now hidden in forms

--- a/views/login.ejs
+++ b/views/login.ejs
@@ -66,7 +66,7 @@
              </label>
            </div>
              <div class="signUpBox"><label for="password">Enter a Password<br>
-               <input type="text" name="password" placeholder="Password123"></input>
+               <input type="password" name="password" placeholder="Password123"></input>
              </label>
              </div>
              <br>
