--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -75,11 +75,11 @@
            </label>
            </div>
            <div class="signUpBox"><label for="password">Create a Password<br>
-             <input type="text" name="password" placeholder="shhhh don't tell anybody"></input>
+             <input type="password" name="password" placeholder="shhhh don't tell anybody"></input>
            </label>
            </div>
            <div class="signUpBox"><label for="confirm_password">Confirm Password<br>
-             <input type="text" name="confirm_password" placeholder="They can see it"></input>
+             <input type="password" name="confirm_password" placeholder="They can see it"></input>
            </label>
            </div>
            <div class ="submitButton">
