--- a/views/index.ejs
+++ b/views/index.ejs
@@ -47,21 +47,8 @@
     </div>
   </nav>
 <!-- END NAVBAR AREA__________________________________________________-->
-<div class = "row text-center landBody">
-  <br>
-  <br>
-  <br>
-  <br>
-  <br>
-  <p class="headLine"> NEED A WAY TO FIND LOCATIONS FOR IMPORTANT MEETINGS? </p>
-  <br>
-  <br>
-  <br>
-  <br>
-  <br>
-  <br>
-  <br>
-
+<div class="page-header">
+  <h1>ketchUp <small>a tool for scheduling meetings</small></h1>
 </div>
 
 
@@ -69,12 +56,12 @@
 <div class="row">
   <div class="loginButton col-md-3">
     <a href="login" class="thumbnail">
-      <p class ="text-center" id="loginText">Please Login</p>
+      <p class ="text-center" id="loginText">login</p>
     </a>
   </div>
   <div class="signUpButton col-md-3">
     <a href="signup" class="thumbnail">
-      <p class="text-center" id="signUpText">Register now!</p>
+      <p class="text-center" id="signUpText">register</p>
     </a>
   </div>
 </div>
