fixed back edits

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -47,8 +47,21 @@
     </div>
   </nav>
 <!-- END NAVBAR AREA__________________________________________________-->
-<div class="page-header">
-  <h1>ketchUp <small>a tool for scheduling meetings</small></h1>
+<div class = "row text-center landBody">
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <p class="headLine"> NEED A WAY TO FIND LOCATIONS FOR IMPORTANT MEETINGS? </p>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+
 </div>
 
 
@@ -56,12 +69,12 @@
 <div class="row">
   <div class="loginButton col-md-3">
     <a href="login" class="thumbnail">
-      <p class ="text-center" id="loginText">login</p>
+      <p class ="text-center" id="loginText">Please Login</p>
     </a>
   </div>
   <div class="signUpButton col-md-3">
     <a href="signup" class="thumbnail">
-      <p class="text-center" id="signUpText">register</p>
+      <p class="text-center" id="signUpText">Register now!</p>
     </a>
   </div>
 </div>
