--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -3,8 +3,21 @@ cd body {
   padding: 50px;
   font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
 }
+body{
+  background-color: gray;
+}
+.container {
+  background-color:gray ;
+}
 
 
+a {
+  color: #00B7FF;
+}
+
+html, body {
+  height: 100%;
+}
 
 #wrap {
   min-height: 100%;
@@ -14,14 +27,15 @@ cd body {
   overflow:auto;
   padding-bottom:150px; /* this needs to be bigger than footer height*/
 }
-
-/* index page */
-.page-header {
-  text-align:center;
+.landBody {
+  background-color: gray;
 }
-
-
+.headLine{
+  font-size: 4rem;
+  color: blue;
+}
 .loginButton {
+  background-color: beige;
   height: 10rem;
   padding-top: 2.5rem;
   border-radius: 5rem;
@@ -32,6 +46,7 @@ cd body {
 }
 
 .signUpButton {
+  background-color: beige;
   height: 10rem;
   padding-top: 2.5rem;
   border-radius: 5rem;
@@ -42,12 +57,14 @@ cd body {
 }
 .lCoverUp {
   width: wrap;
+  background-color: gray;
   height: 45rem;
   position:relative;
   z-index:-1;
 }
 .coverUp {
   width: wrap;
+  background-color: gray;
   height: 45rem;
   position:relative;
   z-index:-1;
@@ -64,6 +81,7 @@ cd body {
 }
 
 .signupForm {
+  background-color: beige;
   border-radius: 5rem;
 }
 
